--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,14 +12,13 @@
     </style>
 
     <style name="btn">
-
-    </style>
-
-    <style name="btn_bottom_submit" parent="btn">
         <item name="android:textColor">@color/color_btn_text_normal</item>
         <item name="android:textSize">@dimen/wordSize_nomal</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/selector_btn_bg</item>
+    </style>
+
+    <style name="btn_bottom_submit" parent="btn">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">44dp</item>
         <item name="android:layout_marginLeft">40dp</item>
@@ -42,6 +41,19 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1px</item>
         <item name="android:background">@color/color_divider</item>
+    </style>
+
+    <style name="LoadingDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimAmount">0.0</item>
+        <!-- 有没有黑色浮层 -->
+        <item name="android:windowContentOverlay">@null</item>
+
     </style>
 
 </resources>
