--- a/app/src/main/res/layout/base_activity.xml
+++ b/app/src/main/res/layout/base_activity.xml
@@ -11,6 +11,6 @@
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
