--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,11 @@
         <item name="colorControlHighlight">@color/colorPrimary</item>
     </style>
 
+    <style name="Splash" parent="AppTheme">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/colorPrimary</item>
+    </style>
+
     <style name="btn">
         <item name="android:textColor">@color/color_btn_text_normal</item>
         <item name="android:textSize">@dimen/wordSize_nomal</item>
